# my-ag-ui-app

./: .dockerignore  .gitignore  Dockerfile  SETUP.md  check_version.py  deploy_app.sh  docker-compose.yml  package-lock.json  package.json  setup.sh  start_app.sh
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/data/: CODE_GENERATION.md
agent/src/: agent.py  agent.py.norag.bak  agent_logging.py copy.bak  main.py
agent/src/agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent/src/rag/: citation.py  index.py  query.py  settings.py
openspec/: project.md
openspec/changes/archive/2026-01-20-implement-procurement-agent/: design.md  evaluation.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-20-improve-rag-citations/: proposal.md  tasks.md
openspec/changes/archive/2026-01-20-reintegrate-rag-tool/: design.md  proposal.md  (+1 more)
openspec/changes/download-procurement-codes/: tasks.md
openspec/changes/implement-procurement-agent/: tasks.md
openspec/changes/replace-proverbs-with-procurement-codes/: proposal.md  tasks.md
openspec/specs/citation-readability/: spec.md
openspec/specs/download-codes/: spec.md
openspec/specs/export-formats/: spec.md
openspec/specs/file-context/: spec.md
openspec/specs/procurement-agent/: spec.md
openspec/specs/procurement-codes/: spec.md
openspec/specs/rag-support/: spec.md
openspec/specs/spreadsheet-support/: spec.md
scripts/: run-agent-prod.sh  run-agent.sh  setup-agent.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: procurement-codes.tsx
src/lib/: types.ts
(+24 files in other folders)
